# uav_trajectory_optimizer

./: README.md  setup.sh
src/cvx/: CMakeLists.txt
src/cvx/src/: main.cpp
src/cvx/src/solvers/: solvers.hpp
src/cvx/src/solvers/cvxgen/: interface_jerk.h  interface_vel.h
src/cvx/src/solvers/cvxgen_accel/: Makefile  csolve.c  csolve.m  cvxgen_lib.c  cvxsolve.m  description.cvxgen  exportmap.map  interface_accel.h  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
src/cvx/src/solvers/cvxgen_jerk/: Makefile  csolve.c  csolve.m  cvxgen_lib.c  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
src/cvx/src/solvers/cvxgen_vel/: Makefile  csolve.c  csolve.m  cvxgen_lib.c  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
